--- a/adminplusfront/package.json
+++ b/adminplusfront/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "pinia": "^3.0.3",
     "vue": "^3.4.38",
     "vue-router": "^4.6.3"
   },
